--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back to questions', test_questions_path %>
+<%= link_to 'Back to questions', test_path(@test) %>
