fix: display questions as a partial in tests view

--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-<%= render template: 'questions/index' %>
+<%= render 'questions/list' %>
 </p>
 
 <%= link_to 'Edit test', edit_test_path(@test) %> |
