--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -6,7 +6,7 @@
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
   <%= form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :body, include_hidden: false do |b| %>
     <p>
-      <%= b.checkbox id: "answer_ids#{b.object.id}" %>
+      <%= b.check_box id: "answer_ids#{b.object.id}" %>
       <%= b.label %>
     </p>
   <% end %>
