--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,4 +1,9 @@
 <h1>Passing the <%= @test_passage.test.title %> test</h1>
+
+<p>
+  Question <%= @test_passage.current_question_number %> out of <%= @test_passage.test.questions.count %>
+</p>
+
 <b>
   <%= @test_passage.current_question.body %>
 </b>
