--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,3 +1,11 @@
 .nav.user {
-  text-align: right;
+  float: right;
+  padding: 8px;
+}
+
+.nav.ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
