--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <ul class="nav ul">
       <% if logged_in? %>
         <li class="nav user"><%= link_to 'Sign Out', signout_path %></li>
-        <li class="nav user"> Welcome, <b><%= current_user.name %> Guru</b></li>
+        <li class="nav user"><b> Welcome, <%= current_user.name %> Guru</b></li>
       <% else %>
         <li class="nav user"><%= link_to 'Sign In', signup_path %></li>
         <li class="nav user"><%= link_to 'Log In', login_path %></li>
