--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,18 @@
 
   <body>
     <ul class="nav ul">
-      <% if logged_in? %>
-        <li class="nav user"><%= link_to 'Sign Out', signout_path, method: :delete %></li>
+      <% if user_signed_in? %>
+        <li class="nav user"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <li class="nav user"><b> Welcome, <%= current_user.name %> Guru</b></li>
       <% else %>
-        <li class="nav user"><%= link_to 'Sign In', signup_path %></li>
-        <li class="nav user"><%= link_to 'Log In', login_path %></li>
+        <li class="nav user"><%= link_to 'Sign Un', new_user_registration_path %></li>
+        <li class="nav user"><%= link_to 'Log In', new_user_session_path %></li>
       <% end %>
 
       <li float: left><b><%= link_to 'TestGuru', root_path %></b></li>
     </ul>
+
+    <%= render 'shared/flash' %>
 
     <p>
     <%= yield %>
