--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,6 +8,6 @@
 <%= render @question.answers %>
 </ol>
 
-<%= link_to 'Back to questions', test_path(@question.test) %> | 
+<%= link_to 'Back to questions', admin_test_path(@question.test) %> | 
 <%= link_to 'Edit', edit_question_path(@question) %> | 
 <%= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: 'Are you sure?' } %>
