feat: add question and answer resources to admin

--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -9,8 +9,7 @@
 </p>
 
 <p>
-<%= render 'questions/list' %>
-<%= render partial: 'questions/question', collection: @test.questions %>
+<%= render 'admin/questions/list' %>
 </p>
 
 <%= link_to 'Edit test', edit_admin_test_path(@test) %> |
