--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -2,7 +2,7 @@
   <span class="nav admin title">Test Guru Admin Panel</span>
   
   <div class="nav-admin user">
-    Welcome, <b class="nav-admin user-email"><%= current_user %></b> Guru |
-    <%= link_to 'Log out', destroy_user_session_path, method: delete %>
+    Welcome, <b class="nav-admin user-email"><%= current_user.name %></b> Guru |
+    <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
   </div>
 </div>
