--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: [@question, @answer], local: true do |form| %>
-  <%= render 'shared_errors', result: @answer %>
+<%= form_with model: [:admin, @question, @answer], local: true do |form| %>
+  <%= render 'shared/errors', result: @answer %>
 
   <p>
     <%= form.label :body %><br>
