--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -2,7 +2,7 @@
   <td><%= test.title %></td>
   <td><%= test.level %></td>
   <td><%= test.questions.count %></td>
-  <td><%= link_to 'Show', admin_test_path(test) %></td>
-  <td><%= link_to 'Edit', edit_admin_test_path(test) %></td>
-  <td><%= link_to 'Delete', admin_test_path(test), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to t('navigation.links.show'), admin_test_path(test) %></td>
+  <td><%= link_to t('navigation.links.edit'), edit_admin_test_path(test) %></td>
+  <td><%= link_to t('navigation.links.delete.method.'), admin_test_path(test), method: :delete, data: { confirm: t('navigation.links.delete.confirm') } %></td>
 </tr>
