--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,15 +1,15 @@
-<h2>All tests</h2>
+<h2><%= t('.header') %></h2>
 
 <p>
-<%= link_to 'New test', new_admin_test_path %>
+<%= link_to t('navigation.links.new'), new_admin_test_path %>
 </p>
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Level</th>
-    <th>Questions</th>
-    <th colspan="3">Actions</th>
+    <th><%= t('tests.index.body.title') %></th>
+    <th><%= t('tests.index.body.level') %></th>
+    <th><%= t('tests.index.body.questions') %></th>
+    <th colspan="3"><%= t('tests.index.body.action') %></th>
   </tr>
   <%= render @tests %>
 </table>
