--- a/app/views/admin/tests/new.html.erb
+++ b/app/views/admin/tests/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Create new test</h1>
+<h1><%= t('.header') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back to all tests', admin_tests_path %>
+<%= link_to t('navigation.links.to_all_tests'), admin_tests_path %>
