--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,6 @@
 <% if result.errors.present? %>
   <div>
-    <h2><%= pluralize(result.errors.count, 'error') %> found:</h2>
+    <h2><%= t('.header', count: result.errors.count) %>:</h2>
     <ul>
       <% result.errors.full_messages.each do |error| %>
       <li><%= error %></li>
