--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,7 +1,7 @@
-<h1>Passing the <%= @test_passage.test.title %> test</h1>
+<h1><%= t('.header', title: @test_passage.test.title) %></h1>
 
 <p>
-  Question <%= @test_passage.current_question_number %> out of <%= @test_passage.test.questions.count %>
+  <%= t('.current_question', current: @test_passage.current_question_number, total: @test_passage.test.questions.count) %>
 </p>
 
 <b>
@@ -16,5 +16,5 @@
     </p>
   <% end %>
 
-  <p><%= form.submit 'Next' %></p>
+  <p><%= form.submit value: t('.submit')%></p>
 <% end %>
