--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,11 +1,11 @@
-<h2>All tests</h2>
+<h2><%= t('.header') %></h2>
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Level</th>
-    <th>Questions</th>
-    <th>Action</th>
+    <th><%= t('.body.title') %></th>
+    <th><%= t('.body.level') %></th>
+    <th><%= t('.body.questions') %></th>
+    <th><%= t('.body.action') %></th>
   </tr>
   <%= render @tests %>
 </table>
