--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,32 +2,31 @@
 <html>
   <head>
     <title>TestGuru</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1 shrink-to-fit=no">
+    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <ul class="nav ul">
-      <% if user_signed_in? %>
-        <li class="nav user"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
-        <li class="nav user"><b> Welcome, <%= current_user.first_name %> Guru</b></li>
-      <% else %>
-        <li class="nav user"><%= link_to 'Sign Un', new_user_registration_path %></li>
-        <li class="nav user"><%= link_to 'Log In', new_user_session_path %></li>
-      <% end %>
+    <%= render 'shared/nav' %>
 
-      <li float: left><b><%= link_to 'TestGuru', root_path %></b></li>
-    </ul>
-
+    <div class="container">
     <%= render 'shared/flash' %>
-
     <p>
     <%= yield %>
     </p>
+  </div>
     <%= render 'shared/footer' %>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
