--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,15 +1,18 @@
-<h2><%= t('.header') %></h2>
+<div class="row justify-content-center">
+  <div class="col col-md-8">
+    <h2 class="text-center"><%= t('.header') %></h2>
+    <p>
+    <%= link_to t('navigation.links.new'), new_admin_test_path, class: 'fs-5' %>
+    </p>
 
-<p>
-<%= link_to t('navigation.links.new'), new_admin_test_path %>
-</p>
-
-<table>
-  <tr>
-    <th><%= t('tests.index.body.title') %></th>
-    <th><%= t('tests.index.body.level') %></th>
-    <th><%= t('tests.index.body.questions') %></th>
-    <th colspan="3"><%= t('tests.index.body.action') %></th>
-  </tr>
-  <%= render @tests %>
-</table>
+    <table class="table table-hover mt-4">
+      <tr class="fs-5">
+        <th scope="col"><%= t('tests.index.body.title') %></th>
+        <th scope="col"><%= t('tests.index.body.level') %></th>
+        <th scope="col"><%= t('tests.index.body.questions') %></th>
+        <th class="text-center" colspan="3"><%= t('tests.index.body.action') %></th>
+      </tr>
+      <%= render @tests %>
+    </table>
+  </div>
+</div>
