--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if result.errors.present? %>
-  <div>
+  <div class="alert alert-danger" role="alert">
     <h2><%= t('.header', count: result.errors.count) %>:</h2>
     <ul>
       <% result.errors.full_messages.each do |error| %>
