--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -4,7 +4,11 @@
 
       <table class="table mt-4">
         <tr class="fs-5">
-          <th scope="col"><%= t('.body.title') %></th>
+          <th scope="col" class="sort-by-title pointer">
+            <%= t('.body.title') %>
+            <%= octicon 'arrow-up', class: 'text-success hide' %>
+            <%= octicon 'arrow-down', class: 'text-success hide' %>
+            </th>
           <th scope="col"><%= t('.body.level') %></th>
           <th scope="col"><%= t('.body.questions') %></th>
           <th scope="col"><%= t('.body.action') %></th>
