feat: add inline editing via js

--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: [:admin, @test], local: true  do |form| %>
-  <%= render 'shared/errors', result: @test %>
+  <%= render 'shared/errors', resource: @test %>
   <p>
     <%= form.label :title %>
     <%= form.text_field :title, id: :test_title %>
