--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,10 @@
-<% if result.errors.present? %>
-  <div class="alert alert-danger" role="alert">
-    <h2><%= t('.header', count: result.errors.count) %>:</h2>
+<% if resource.present? && resource.errors.any? %>
+  <%= content_tag :div, class: 'alert alert-danger resource-errors',data: { resource_id: resource.id } do %>
+    <h2><%= t('.header', count: resource.errors.count) %>:</h2>
     <ul>
-      <% result.errors.full_messages.each do |error| %>
-      <li><%= error %></li>
+      <% resource.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
       <% end %>
     </ul>
-  </div>
+  <% end %>
 <% end %>
