--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: [:admin, @question, @answer], local: true do |form| %>
-  <%= render 'shared/errors', result: @answer %>
+  <%= render 'shared/errors', resource: @answer %>
 
   <p>
     <%= form.label :body %><br>
