--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: [:admin, @test, @question], local: true do |form| %>
-  <%= render 'shared/errors', result: @question %>
+  <%= render 'shared/errors', resource: @question %>
   <p>
     <%= form.label :body %><br>
     <%= form.text_field :body, id: :question_body %>
