--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,8 +1,11 @@
 <tr>
-  <td><%= test.title %></td>
-  <td><%= test.level %></td>
-  <td><%= test.questions.count %></td>
-  <td><%= link_to t('navigation.links.show'), admin_test_path(test) %></td>
-  <td><%= link_to t('navigation.links.edit'), edit_admin_test_path(test) %></td>
-  <td><%= link_to t('navigation.links.delete.method.'), admin_test_path(test), method: :delete, data: { confirm: t('navigation.links.delete.confirm') } %></td>
+  <td class="align-middle">
+    <%= content_tag :span, test.title, data: { test_id: test.id }, class: 'test-title' %>
+    <%= render 'form_inline', test: test == @test ? @test : test %>
+  </td>
+  <td class="align-middle"><%= test.level %></td>
+  <td class="align-middle"><%= test.questions.count %></td>
+  <td class="align-middle"><%= link_to t('navigation.links.show'), admin_test_path(test) %></td>
+  <td class="align-middle"><%= link_to t('navigation.links.edit'), edit_admin_test_path(test), data: {test_id: test.id}, class: 'form-inline-link' %></td>
+  <td class="align-middle"><%= link_to t('navigation.links.delete.method.'), admin_test_path(test), method: :delete, data: { confirm: t('navigation.links.delete.confirm') } %></td>
 </tr>
