--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -5,6 +5,8 @@
     <%= link_to t('navigation.links.new'), new_admin_test_path, class: 'fs-5' %>
     </p>
 
+    <%= render 'shared/errors', resource: @test %>
+
     <table class="table table-hover mt-4">
       <tr class="fs-5">
         <th scope="col" class="sort-by-title pointer">
