--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= t('.header', title: @test_passage.test.title) %></h1>
 
+<%= content_tag :div, '', data: { questions: @test_passage.test.questions.count, current_question: @test_passage.current_question_number }, id: 'progress-bar' %>
+
 <p>
   <%= t('.current_question', current: @test_passage.current_question_number, total: @test_passage.test.questions.count) %>
 </p>
