feat: add feedback form

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,5 +3,5 @@
   <br>
   <%= github_url('ekateriniy', 'test-guru') %>: the app to create, manage and take different tests.
   <br>
-  Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'https://thinknetica.com/' %>
+  Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'https://thinknetica.com/', target: '_blank', rel: 'nofollow noopener' %>
 </p>
