feat: add feedback link to footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,9 @@
-<p>
-  <%= current_year %> | Ekaterina Yunina
-  <br>
-  <%= github_url('ekateriniy', 'test-guru') %>: the app to create, manage and take different tests.
-  <br>
-  Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'https://thinknetica.com/', target: '_blank', rel: 'nofollow noopener' %>
-</p>
+<div class="container-fluid">
+  <p>
+    <%= current_year %> | Ekaterina Yunina | <%= link_to 'Feedback', feedback_path %>
+    <br>
+    <%= github_url('ekateriniy', 'test-guru') %>: the app to create, manage and take different tests.
+    <br>
+    Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'https://thinknetica.com/', target: '_blank', rel: 'nofollow noopener' %>
+  </p>
+</div>
