--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), id: 'new_user') do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -39,3 +39,9 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<script>
+  const inputForm = document.getElementById('new_user')
+
+  if (inputForm) { new Check(inputForm) }
+</script>
