--- a/app/views/admin/questions/_list.html.erb
+++ b/app/views/admin/questions/_list.html.erb
@@ -5,7 +5,7 @@
 <table>
   <tr>
     <th>Questions</th>
-    <th colspan="3">Actions</th>
+    <th class="text-center" colspan="3">Actions</th>
   </tr>
 
   <%= render @test.questions %>
