--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -7,5 +7,5 @@
   <td class="align-middle"><%= test.questions.count %></td>
   <td class="align-middle"><%= link_to t('navigation.links.show'), admin_test_path(test) %></td>
   <td class="align-middle"><%= link_to t('navigation.links.edit'), edit_admin_test_path(test), data: {test_id: test.id}, class: 'form-inline-link' %></td>
-  <td class="align-middle"><%= link_to t('navigation.links.delete.method.'), admin_test_path(test), method: :delete, data: { confirm: t('navigation.links.delete.confirm') } %></td>
+  <td class="align-middle"><%= link_to t('navigation.links.delete.method'), admin_test_path(test), method: :delete, data: { confirm: t('navigation.links.delete.confirm') } %></td>
 </tr>
