--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col col-md-8">
     <h2 class="text-center"><%= t('.header') %></h2>
     <p>
-    <%= link_to t('navigation.links.new'), new_admin_test_path, class: 'fs-5' %>
+    <%= link_to t('navigation.links.new_test'), new_admin_test_path, class: 'fs-5' %>
     </p>
 
     <%= render 'shared/errors', resource: @test %>
