--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <p>
     <%= current_year %> | Ekaterina Yunina | <%= link_to 'Feedback', feedback_path %>
     <br>
-    <%= github_url('ekateriniy', 'test-guru') %>: the app to create, manage and take different tests.
+    <%= github_url('ekateriniy', 'test-guru') %>: <%= t('.about_app') %>
     <br>
     Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'https://thinknetica.com/', target: '_blank', rel: 'nofollow noopener' %>
   </p>
