--- a/app/views/admin/answers/edit.html.erb
+++ b/app/views/admin/answers/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Answer</h1>
+<h2><%= t('.head') %></h2>
 
 <p>
   <%= @answer.question.body %>
@@ -6,4 +6,4 @@
 
 <%= render 'form', answer: @answer %>
 
-<%= link_to 'Back', admin_question_path(@answer.question) %>
+<%= link_to t('navigation.links.to_all_answers'), admin_question_path(@answer.question) %>
