--- a/app/views/admin/answers/show.html.erb
+++ b/app/views/admin/answers/show.html.erb
@@ -1,16 +1,16 @@
-<h1>Question</h1>
+<h2><%= t('.head') %></h2>
 
 <p><%= @answer.question.body %></p>
 
 <p>
-  <b>Answer: </b>
+  <b><%= t('.answer') %>: </b>
   <%= @answer.body %>
 </p>
 
 <p>
-  <b>Correct: </b>
+  <b><%= t('.correct') %>: </b>
   <%= @answer.correct %>
 </p>
 
-<%= link_to 'Edit', edit_admin_answer_path(@answer) %> |
-<%= link_to 'Back', admin_question_path(@answer.question) %>
+<%= link_to t('navigation.links.edit'), edit_admin_answer_path(@answer) %> |
+<%= link_to t('navigation.links.to_all_answers'), admin_question_path(@answer.question) %>
