--- a/app/views/admin/questions/edit.html.erb
+++ b/app/views/admin/questions/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back to questions', admin_test_path(@question.test) %>
+<%= link_to t('navigation.links.to_all_questions'), admin_test_path(@question.test) %>
