--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,13 +1,13 @@
 <h2><%= @question.test.title.capitalize %></h2>
-<p><strong>Question: </strong><%= @question.body %></p>
+<p><strong class="fs-5"><%= t('.head') %> </strong><%= @question.body %></p>
 
-<h2>Answers</h2>
-<%= link_to 'New answer', new_admin_question_answer_path(@question) %>
+<h4><%= t('.answers') %></h4>
+<%= link_to t('navigation.links.new_answer'), new_admin_question_answer_path(@question) %>
 
 <ol>
 <%= render @question.answers %>
 </ol>
 
-<%= link_to 'Back to questions', admin_test_path(@question.test) %> | 
-<%= link_to 'Edit', edit_admin_question_path(@question) %> | 
-<%= link_to 'Delete', admin_question_path(@question), method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to t('navigation.links.to_all_questions'), admin_test_path(@question.test) %> | 
+<%= link_to t('navigation.links.edit'), edit_admin_question_path(@question) %> | 
+<%= link_to t('navigation.links.delete.method.'), admin_question_path(@question), method: :delete, data: { confirm: t('navigation.links.delete.confirm') } %>
