--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -5,7 +5,7 @@
   <div class="nav-admin user">
     <span class="navbar-text">
       <b><%= t('layout.greeting', name: current_user.first_name) %></b> |
-        <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+        <%= link_to t('layout.sign_out'), destroy_user_session_path, method: :delete %>
       </span>
     </div>
   </div>
