feat: implement badge servise

--- a/app/views/admin/badges/_form.html.erb
+++ b/app/views/admin/badges/_form.html.erb
@@ -6,8 +6,8 @@
   </p>
 
   <p>
-    <%= form.label :attribute %>
-    <%= form.select :badge, :attribute, Badge.attributes %>
+    <%= form.label :rule %>
+    <%= form.select :badge, :rule, Badge.rules %>
   </p>
 
   <p>
