--- a/app/views/admin/badges/index.html.erb
+++ b/app/views/admin/badges/index.html.erb
@@ -10,7 +10,7 @@
     <table class="table table-hover mt-4">
       <tr class="fs-5">
         <th scope="col">Title</th>
-        <th scope="col">Attribute</th>
+        <th scope="col">Rule</th>
         <th scope="col">Value</th>
         <th class="text-center" colspan="3">Action</th>
       </tr>
