--- a/app/views/admin/badges/_badge.html.erb
+++ b/app/views/admin/badges/_badge.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td class="align-middle"><%= badge.title %></td>
-  <td class="align-middle"><%= badge.attribute %></td>
+  <td class="align-middle"><%= badge.rule %></td>
   <td class="align-middle"><%= badge.value %></td>
   <td class="align-middle"><%= link_to t('navigation.links.show'), admin_badge_path(badge) %></td>
   <td class="align-middle"><%= link_to t('navigation.links.edit'), edit_admin_badge_path(badge) %></td>
