--- a/app/views/badges/index.html.erb
+++ b/app/views/badges/index.html.erb
@@ -4,6 +4,7 @@
 
     <table class="table table-hover mt-4">
       <tr class="fs-5">
+        <th scope="col"></th>
         <th scope="col">Title</th>
         <th scope="col">Rule</th>
         <th scope="col">Value</th>
