--- a/app/views/admin/badges/_badge.html.erb
+++ b/app/views/admin/badges/_badge.html.erb
@@ -1,4 +1,5 @@
 <tr>
+  <td class="align-middle"><img src="<%= badge.image %>" alt="image" width="50" height="60"></td>
   <td class="align-middle"><%= badge.title %></td>
   <td class="align-middle"><%= badge.rule %></td>
   <td class="align-middle"><%= badge.value %></td>
