--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -16,6 +16,7 @@
         </th>
         <th scope="col"><%= t('tests.index.body.level') %></th>
         <th scope="col"><%= t('tests.index.body.questions') %></th>
+        <th scope="col"><%= t('tests.index.body.time') %></th>
         <th class="text-center" colspan="3"><%= t('tests.index.body.action') %></th>
       </tr>
       <%= render @tests %>
