--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -11,6 +11,7 @@
             </th>
           <th scope="col"><%= t('.body.level') %></th>
           <th scope="col"><%= t('.body.questions') %></th>
+          <th scope="col"><%= t('.body.time') %></th>
           <th scope="col"><%= t('.body.action') %></th>
         </tr>
         <%= render @tests %>
