--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= content_tag :div, '', data: { questions: @test_passage.test.questions.count, current_question: @test_passage.current_question_number }, id: 'progress-bar' %>
 
-<%= content_tag :div, '', data: { time: @test_passage.test.time }, id: 'timer', class: 'text-danger' %>
+<%= content_tag :div, '', data: { time: @test_passage.test.time }, id: 'timer', class: 'text-danger' if @test_passage.test.has_timer? %>
 
 <p>
   <%= t('.current_question', current: @test_passage.current_question_number, total: @test_passage.test.questions.count) %>
